[tool.poetry]
name = "repl_python3_Interagation"
version = "7.0.0"
description = ""
authors = ["Dylan Kreisberg <dylankreisberg79@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
colorama = "^0.4.4"
yarl = "^1.7.2"
frozenlist = "^1.2.0"
urllib3 = "^1.26.8"
pytz = "^2021.3"
firebase-admin = "^6.0.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
